aplique css en los contenedores

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header class="cabecera">
-        <h1>CALLUM</h1>
-        <nav>
+        <h1 class="primerTitulo">MATIAS</h1>
+        <nav class="navegacion">
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
             <a href="#">SERVICES</a>
@@ -29,10 +29,13 @@
     </header>
 
     <main>
-        <section class="introducion">
+        <section class="introduccion">
             <h2>Hi, i'm a freelancer</h2>
             <h1>DEVELOPER</h1>
             <p>based in Santa Fe, Argentina</p>
+            <button>View my works</button>
+            <a href="#">Contact me</a>
+            <img src="img/mifoto.jpg" width="200px">
         </section>
 
         <section class="aboutMe">
@@ -45,7 +48,7 @@
                 Assumenda enim recusandae, 
                 fugiat nisi voluptatem beatae?</p>
             <div>
-                <img src="22.png" width="200px">
+                <img src="img/22.png" width="200px">
             </div>
 
 
@@ -136,13 +139,17 @@
             <p>Portfolio</p>
             <h1>some of my most recent projects</h1>
 
-            <div>
-
+            <div class="projects">
+                <p>All</p>
+                <p>Detailed</p>
+                <p>Mockups</p>
+                <p>Youtube Videos</p>
+                <p>Vimeo Videos</p>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="piepagina">
         <h1>Let's get in touch</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
