finalize el hero (introduccion, falta pocisionar los elementos)

--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
 
     <main>
         <section class="introduccion">
-            <h2>Hi, i'm a freelancer</h2>
+            <div class="textoIntroduccion">
+            <h2>HI, I'M A FREELANCER</h2>
             <h1>DEVELOPER</h1>
             <p>based in Santa Fe, Argentina</p>
-            <button>View my works</button>
+            <button class="botonIntro">View my works</button>
             <a href="#">Contact me</a>
-            <img src="img/mifoto.jpg" width="200px">
+            </div>
+            <div class="miImagen">
+                <img src="img/mifoto.jpg">
+                </div>
         </section>
 
         <section class="aboutMe">
+            <div class="aboutMeTitulo">
             <p>About me</p>
             <h1>Know me more</h1>
+            </div>
+            <div class="textoAboutMe">
             <h1>Hi, i'm Matias Lamberti</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -49,6 +56,7 @@
                 fugiat nisi voluptatem beatae?</p>
             <div>
                 <img src="img/22.png" width="200px">
+                <h1>Years of <b>experience</b></h1>
             </div>
 
 
