Finalize la decoracion del segundo section (falta posicionar bien los elementos) y agregue 6 div para cada img en el tercer section.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main>
         <section class="introduccion">
             <div class="textoIntroduccion">
-            <h2>HI, I'M A FREELANCER</h2>
-            <h1>DEVELOPER</h1>
-            <p>based in Santa Fe, Argentina</p>
+            <h2>HOLA! SOY FREELANCER</h2>
+            <h1>DESARROLLADOR</h1>
+            <p>Vivo en Santa Fe, Argentina</p>
             <button class="botonIntro">View my works</button>
             <a href="#">Contact me</a>
             </div>
@@ -44,38 +44,39 @@
 
         <section class="aboutMe">
             <div class="aboutMeTitulo">
-            <p>About me</p>
-            <h1>Know me more</h1>
+            <p>Sobre mi</p>
+            <h1>Conoceme</h1>
             </div>
             <div class="textoAboutMe">
-            <h1>Hi, i'm Matias Lamberti</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            <h1>Hola! soy <b class="nombreAboutMe">Matias Lamberti</b></h1>
+            <p class="pAboutMe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                 Reprehenderit enim praesentium a. 
                 Assumenda enim recusandae, 
                 fugiat nisi voluptatem beatae?</p>
             <div>
-                <img src="img/22.png" width="200px">
+            <div class="logoExperiencia">
+                <img src="img/22.png">
                 <h1>Years of <b>experience</b></h1>
             </div>
 
 
            <div class="DATOS">
                 <div>
-                    <p>Name</p>
-                     <p>Matias</p>
+                    <p class="pDatos">Nombre:</p>
+                     <p class="pDatos2">Matias Lamberti</p>
                 </div>
                 <div>
-                    <p>Email</p>
-                     <p>matiaslamberti17@gmail.com</p>
+                    <p class="pDatos">Email:</p>
+                     <a href="#">matiaslamberti17@gmail.com</a>
                 </div>
                 <div>
-                    <p>Date Of birth</p>
-                     <p>06/03/2000</p>
+                    <p class="pDatos">Fecha De Nacimiento:</p>
+                     <p class="pDatos2">06/03/2000</p>
                 </div>
                 <div>
-                    <p>From</p>
-                     <p>Santa Fe, Argentina</p>
+                    <p class="pDatos">De:</p>
+                     <p class="pDatos2">Santa Fe, Argentina</p>
                 </div>
            </div>
             
@@ -85,42 +86,64 @@
             <p>What i do?</p>
             <h1>How i can help your next project</h1>
             <div>
+                <div>
+                    <img src="">
                 <h2>Graphic desing</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
+                <div>
+                <img src="">
                 <h2>Web design</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
+                
+                <div>
+                    <img src="">
                 <h2>Web development</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
+
+                <div>
+                    <img src="">
                 <h2>Brand identity</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
+
+                <div>
+                    <img src="">
                 <h2>Business analysis</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
+
+                <div>
+                    <img src="">
                 <h2>Digital marketing</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
                     Reprehenderit enim praesentium a. 
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
+                </div>
             </div>
         </section>
 
