agregue imagenes para la tercera seccion

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <section class="whatIDo">
             <p>What i do?</p>
             <h1>How i can help your next project</h1>
-            <div>
+            <div class="contenedorIconosYtexto">
                 <div>
-                    <img src="">
+                    <img src="img/paleta.png">
                 <h2>Graphic desing</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -96,7 +96,7 @@
                     fugiat nisi voluptatem beatae?</p>
                 </div>
                 <div>
-                <img src="">
+                <img src="img/monitor.png">
                 <h2>Web design</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -104,9 +104,9 @@
                     Assumenda enim recusandae, 
                     fugiat nisi voluptatem beatae?</p>
                 </div>
-                
+
                 <div>
-                    <img src="">
+                    <img src="img/lapiz.png">
                 <h2>Web development</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -116,7 +116,7 @@
                 </div>
 
                 <div>
-                    <img src="">
+                    <img src="img/brush.png">
                 <h2>Brand identity</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -126,7 +126,7 @@
                 </div>
 
                 <div>
-                    <img src="">
+                    <img src="img/analisis.png">
                 <h2>Business analysis</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
@@ -136,7 +136,7 @@
                 </div>
 
                 <div>
-                    <img src="">
+                    <img src="img/megafono.png">
                 <h2>Digital marketing</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
