agregue texto y estilo en el section resume

--- a/index.html
+++ b/index.html
@@ -153,22 +153,79 @@
         </section>
 
         <section class="resume">
-            <p>Resume</p>
-            <h1>A summary of my resume</h1>
-            <h2>My education</h2>
-            <h2>My experience</h2>
+            <div class="tituloResume">
+                <p class="parrafoResume">Resumen</p>
+                <h1 class="h1Resume">Un resumen de mi currículum.</h1>
+            </div>
+                <div class="educacionExperiencia">
+                    
+                <div class="educacion">
+                    <h2>Mi educacion</h2>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <p>Harvard university / 2015-2017</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
 
-            <div>
-                <h2>My skills</h2>
-                <p>Web desing</p>
-                <p>HTML/CSS</p>
-                <p>Javascript</p>
-                <p>React Js</p>
-                <p>Angular Js</p>
-                <p>Bootstrap</p>
+                    <div>
+                        <h2>Bachelor in Computer Engineering</h2>
+                        <p>University of California / 2014-2015</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
+
+                    <div>
+                        <h2>Computer Science</h2>
+                        <p>International university / 2013-2014</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
+                </div>
+
+                <div class="experienciaResume">
+                    <h2>Mi experiencia</h2>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <p>Harvard university / 2015-2017</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
+
+                    <div>
+                        <h2>Bachelor in Computer Engineering</h2>
+                        <p>University of California / 2014-2015</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
+
+                    <div>
+                        <h2>Computer Science</h2>
+                        <p>International university / 2013-2014</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                    </div>
+                </div>
             </div>
 
-            <a><button>Download CV</button></a>
+            <div class="skills">
+                <h2>Mis habilidades</h2>
+                    <div>
+                        <p>Diseño web</p>
+                    </div>
+                    <div>
+                        <p>HTML/CSS</p>
+                    </div>
+                    <div>
+                        <p>Javascript</p>
+                    </div>
+                    <div>
+                        <p>React Js</p>
+                    </div>
+                    <div>
+                        <p>Angular Js</p>
+                    </div>
+                    <div>
+                        <p>Bootstrap</p>
+                    </div>
+            </div>
+            <div class="botonDescargarCV">
+                <a><button>Descargar CV</button></a>
+            </div>
         </section>
         
         <section class="portfolio">
