finalize el estilo del CV del section resume falta el estilo de las skills

--- a/index.html
+++ b/index.html
@@ -160,44 +160,54 @@
                 <div class="educacionExperiencia">
                     
                 <div class="educacion">
-                    <h2>Mi educacion</h2>
+                    <h1 class="h1edu">Mi educacion</h1>
+                    <div class="bordeEducacion">
                     <div>
                         <h2>Master in Computer Engineering</h2>
                         <p>Harvard university / 2015-2017</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                        <hr>
                     </div>
 
                     <div>
                         <h2>Bachelor in Computer Engineering</h2>
                         <p>University of California / 2014-2015</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                        <hr>
                     </div>
 
                     <div>
                         <h2>Computer Science</h2>
                         <p>International university / 2013-2014</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                        <hr>
                     </div>
+                </div>
                 </div>
 
                 <div class="experienciaResume">
-                    <h2>Mi experiencia</h2>
-                    <div>
-                        <h2>Master in Computer Engineering</h2>
-                        <p>Harvard university / 2015-2017</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
-                    </div>
+                    <h1 class="h1exp">Mi experiencia</h1>
+                    <div class="bordeExperiencia">
+                        <div>
+                            <h2>Sr.Front-end Developer</h2>
+                            <p>Apple Inc / 2020-Current</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                            <hr>
+                        </div>
 
-                    <div>
-                        <h2>Bachelor in Computer Engineering</h2>
-                        <p>University of California / 2014-2015</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
-                    </div>
+                        <div>
+                            <h2>Jr.Front-end Developer</h2>
+                            <p>Dribble Inc / 2018-2020</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                            <hr>
+                        </div>
 
-                    <div>
-                        <h2>Computer Science</h2>
-                        <p>International university / 2013-2014</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                        <div>
+                            <h2>HTML Developer</h2>
+                            <p>Adobe Inc / 2017-2018</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laboriosam reprehenderit.</p>
+                            <hr>
+                        </div>
                     </div>
                 </div>
             </div>
