Finalize el section resume

--- a/index.html
+++ b/index.html
@@ -212,29 +212,80 @@
                 </div>
             </div>
 
+            <div class="h1skills">
+                <h1>Mis habilidades</h1>
+            </div>
             <div class="skills">
-                <h2>Mis habilidades</h2>
-                    <div>
+               
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
                         <p>Diseño web</p>
-                    </div>
-                    <div>
-                        <p>HTML/CSS</p>
-                    </div>
-                    <div>
-                        <p>Javascript</p>
-                    </div>
-                    <div>
+                        <p>65%</p>
+                        </div>
+                        <div class="contenedorBarra1">
+                            <div class="barra1">
+                            </div>
+                        </div> 
+                    </div> 
+
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
                         <p>React Js</p>
+                        <p>70%</p>
+                        </div>
+                        <div class="contenedorBarra2">
+                            <div class="barra2">
+                            </div>
+                        </div> 
                     </div>
-                    <div>
+
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
+                        <p>HTML/CSS</p>
+                        <p>95%</p>
+                        </div>
+                        <div class="contenedorBarra3">
+                            <div class="barra3">
+                            </div>
+                        </div> 
+                    </div>
+
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
                         <p>Angular Js</p>
+                        <p>60%</p>
+                        </div>
+                        <div class="contenedorBarra4">
+                            <div class="barra4">
+                            </div>
+                        </div> 
                     </div>
-                    <div>
+
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
+                        <p>Javascript</p>
+                        <p>80%</p>
+                        </div>
+                        <div class="contenedorBarra5">
+                            <div class="barra5">
+                            </div>
+                        </div> 
+                    </div>
+
+                    <div class="contenedor">
+                        <div class="skillPorcentaje">
                         <p>Bootstrap</p>
+                        <p>99%</p>
+                        </div>
+                        <div class="contenedorBarra6">
+                            <div class="barra6">
+                            </div>
+                        </div> 
                     </div>
             </div>
-            <div class="botonDescargarCV">
-                <a><button>Descargar CV</button></a>
+
+            <div class="contenedorBotonDescargarCV">
+                <a><button class="botonDescargarCV">Descargar CV</button></a> 
             </div>
         </section>
         
