cambien el ancho de la fuente del boton descargar cv

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         
         <section class="portfolio">
             <p>Portfolio</p>
-            <h1>some of my most recent projects</h1>
+            <h1>algunos de mis proyectos más recientes</h1>
 
             <div class="projects">
                 <p>All</p>
