--- a/index.html
+++ b/index.html
@@ -290,10 +290,12 @@
         </section>
         
         <section class="portfolio">
-            <p>Portfolio</p>
-            <h1>algunos de mis proyectos más recientes</h1>
+            <div class="parrafoytituloPortfolio">
+                <p>Portfolio</p>
+                <h1>algunos de mis proyectos más recientes</h1>
+            </div>
 
-            <div class="projects">
+            <div class="proyectosPortfolio">
                 <p>All</p>
                 <p>Detailed</p>
                 <p>Mockups</p>
