--- a/index.html
+++ b/index.html
@@ -302,6 +302,31 @@
                 <p>Youtube Videos</p>
                 <p>Vimeo Videos</p>
             </div>
+            <div class="imagenesPortfolio">
+                <div class="imagen1">
+                    <img src="img/imagen1.jpg">
+                </div>
+
+                <div class="imagen2">
+                    <img src="img/imagen2.jpg">
+                </div>
+
+                <div class="imagen3">
+                    <img src="img/imagen3.jpg">
+                </div>
+
+                <div class="imagen4">
+                    <img src="img/imagen4.jpg">
+                </div>
+
+                <div class="imagen5">
+                    <img src="img/imagen5.jpg">
+                </div>
+
+                <div class="imagen6">
+                    <img src="img/imagen6.jpg">
+                </div>
+            </div>
         </section>
     </main>
 
