agregue etiquetas div al section footer e iconos bootstrap

--- a/index.html
+++ b/index.html
@@ -330,35 +330,60 @@
         </section>
     </main>
 
-    <footer class="piepagina">
-        <h1>Let's get in touch</h1>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
-            Reprehenderit enim praesentium a. 
-            Assumenda enim recusandae, 
-            fugiat nisi voluptatem beatae?</p>
-        
-        <p>Living in:</p>
-        <p>San Juan 1258, Santa Fe, Santa Fe, Argentina</p>
-        <p>Call:</p>
-        <p>(+54) 342-4634008</p>
-
-        <h1>Estimate your project?</h1>
-        <div class="datosFooter">
-            <div>
-                <p>What is your name?</p>
-            </div>
-            <div>
-                <p>Your email address</p>
-            </div>
-            <div>
-                <p>How i can help you?</p>
-            </div>
-            <div>
-                <button>Send</button>
-            </div>
+    <footer class="footer">
+    <div class="primeraColumna">
+        <div class="tituloFooter">
+            <h1>Let's get in touch</h1>
         </div>
+
+        <div class="parrafoFooter">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Temporibus cumque modi quam delectus. Doloremque exercitationem cum a perferendis debitis. 
+                Reprehenderit enim praesentium a. 
+                Assumenda enim recusandae, 
+                fugiat nisi voluptatem beatae?</p>
+        </div>
+
+        <div class="datosPersonalesFooter">
+            <p>Vivo en:</p>
+            <p>San Juan 1258, Santa Fe, Santa Fe, Argentina</p>
+            <p>Tel:</p>
+            <p>(+54) 342-4634008</p>
+        </div>
+
+        <div class="contenedorIconosFooter">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-github"></i>
+        </div>
+    </div>
+    <div class="segundaColumna">
+        <h1>Estimar su poryecto?</h1>
+
+        <div class="datosFooter">
+            <form action="">
+                <div>
+                    <label>Cual es tu nombre:</label>
+                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                </div>
+
+                <div>
+                    <label>Tu direccion Email.</label>
+                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                </div>
+
+                <div>
+                    <label>Como te puedo ayudar?</label>
+                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                </div>
+
+                <div>
+                    <button>Send</button>
+                </div>
+            </form>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
