puse estilos en el form

--- a/index.html
+++ b/index.html
@@ -365,21 +365,23 @@
             <form action="">
                 <div>
                     <label>Cual es tu nombre:</label>
-                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                    <br>
+                    <input type="text"  minlength="5" maxlength="15" autocomplete="off">
                 </div>
 
                 <div>
                     <label>Tu direccion Email.</label>
-                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                    <br>
+                    <input type="email"  minlength="5" maxlength="30" autocomplete="off">
                 </div>
 
-                <div>
+                <div class="inputComoTePuedoAyudar">
                     <label>Como te puedo ayudar?</label>
-                    <input type="text" placeholder="nombre" minlength="5" maxlength="10" autocomplete="off">
+                    <br>
+                    <input  type="text"  minlength="5" maxlength="250" autocomplete="off">
                 </div>
-
                 <div>
-                    <button>Send</button>
+                <button input="submit">Enviar</button>
                 </div>
             </form>
         </div>
