finalize el section footer

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <footer class="footer">
     <div class="primeraColumna">
         <div class="tituloFooter">
-            <h1>Let's get in touch</h1>
+            <h1>Mantengámonos en contacto</h1>
         </div>
 
         <div class="parrafoFooter">
@@ -345,9 +345,9 @@
         </div>
 
         <div class="datosPersonalesFooter">
-            <p>Vivo en:</p>
-            <p>San Juan 1258, Santa Fe, Santa Fe, Argentina</p>
-            <p>Tel:</p>
+            <h3 class="primerh3">Vivo en:</h3>
+            <p>San Juan 1258, Santa Fe, Ciudad de Santa Fe, Argentina</p>
+            <h3 class="segundoh3">Tel:</h3>
             <p>(+54) 342-4634008</p>
         </div>
 
@@ -359,7 +359,7 @@
         </div>
     </div>
     <div class="segundaColumna">
-        <h1>Estimar su poryecto?</h1>
+        <h1>Estimar su proyecto?</h1>
 
         <div class="datosFooter">
             <form action="">
@@ -370,7 +370,7 @@
                 </div>
 
                 <div>
-                    <label>Tu direccion Email.</label>
+                    <label>Su direccion Email:</label>
                     <br>
                     <input type="email"  minlength="5" maxlength="30" autocomplete="off">
                 </div>
@@ -380,8 +380,10 @@
                     <br>
                     <input  type="text"  minlength="5" maxlength="250" autocomplete="off">
                 </div>
-                <div>
-                <button input="submit">Enviar</button>
+                <div class="buttonComoTePuedoAyudar">
+                    <div class="botonYFlecha">
+                <button input="submit">Enviar<i class="bi bi-arrow-right-short"></i></button>
+                    </div>
                 </div>
             </form>
         </div>
