modifique el posicionamiento de los elementos del hero

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
             <h2>HOLA! SOY FREELANCER</h2>
             <h1>DESARROLLADOR</h1>
             <p>Vivo en Santa Fe, Argentina</p>
-            <button class="botonIntro">View my works</button>
-            <a href="#">Contact me</a>
+                <div class="contenedorBotonYA">
+                    <button class="botonIntro">Ver mis trabajos</button>
+                    <a class="contactame" href="#">Contact me<i class="bi bi-arrow-down-circle"></i></a>
+                </div>
             </div>
             <div class="miImagen">
                 <img src="img/mifoto.jpg">
-                </div>
+            </div>
         </section>
 
         <section class="aboutMe">
