modifique el posicionamiento de los elementos del section aboutme

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <p>Sobre mi</p>
             <h1>Conoceme</h1>
             </div>
+            <div class="textoYLogo">
             <div class="textoAboutMe">
             <h1>Hola! soy <b class="nombreAboutMe">Matias Lamberti</b></h1>
             <p class="pAboutMe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -59,9 +60,11 @@
             </div>
             <div class="logoExperiencia">
                 <img src="img/22.png">
+                <div class="h1logoexp">
                 <h1>Years of <b>experience</b></h1>
             </div>
-
+            </div>
+        </div>
 
            <div class="DATOS">
                 <div>
