agregue mis redes a los iconos

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <a href="#">CONTACT</a>
         </nav>
         <div class="contenedorIconos">
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-twitter"></i>
-            <i class="bi bi-instagram"></i>
+            <a href="https://es-la.facebook.com/matias.lamberti.75" i class="bi bi-facebook"></i></a>
+            <a href ="https://github.com/matiaslamberti" i class="bi bi-github"></i></a>
+            <a href ="https://www.instagram.com/lamberti_matiasb/" i class="bi bi-instagram"></i></a>
         </div>
     </header>
 
@@ -357,10 +357,10 @@
         </div>
 
         <div class="contenedorIconosFooter">
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-twitter"></i>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-github"></i>
+            <a href="https://es-la.facebook.com/matias.lamberti.75" i class="bi bi-facebook"></i></a>
+            <a href ="https://github.com/matiaslamberti" i class="bi bi-github"></i></a>
+            <a href ="https://www.instagram.com/lamberti_matiasb/" i class="bi bi-instagram"></i></a>
+            <a href ="https://www.instagram.com/lamberti_matiasb/" i class="bi bi-twitter"></i></a>
         </div>
     </div>
     <div class="segundaColumna">
